Start working on structure of home page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,65 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <header class="page-header">
+            <div class="container">
+
+            </div>
+        </header>
+
+        <section class="about-me">
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section class="milestones">
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section class="resume">
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section class="skills">
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section class="works">
+            <div class="container">
+
+            </div>
+        </section>
+
+
+        <section class="quote">
+            <div class="container">
+
+            </div>
+        </section>
+
+
+        <section class="contact">
+            <div class="container">
+
+            </div>
+        </section>
+
+
+
+
+        <footer class="page-footer">
+            <div class="container">
+
+            </div>
+        </footer>
+
        
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
