Working on header

--- a/index.html
+++ b/index.html
@@ -1,84 +1,161 @@
 <!doctype html>
 <html class="no-js" lang="pl">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Paweł Chyła - portfolio</title>
-        <meta name="description" content="Paweł Chyła - portfolio">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Paweł Chyła - portfolio</title>
+    <meta name="description" content="Paweł Chyła - portfolio">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="css/lib.css">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="css/lib.css">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
 
-        <header class="page-header">
-            <div class="container">
+<header class="page-header">
 
-            </div>
-        </header>
+    <button class="page-header__menu-open">
+        <div class="page-header__span-container">
+            <span class="page-header__span"></span>
+            <span class="page-header__span"></span>
+            <span class="page-header__span"></span>
+        </div>
+    </button>
 
-        <section class="about-me">
-            <div class="container">
+    <div class="container">
+        <h1 class="page-header__heading">Paweł Chyła</h1>
+        <p class="page-header__subheading">front end / webdeveloper</p>
+        <ul class="page-header__social-list">
 
-            </div>
-        </section>
+            <li class="page-header__social-item">
+                <a href="http://facebook.com/PawelChyla88" target="_blank" class="page-header__social-link">
+                    <span class="page-header__social-icon fa fa-facebook" aria-hidden="true">
 
-        <section class="milestones">
-            <div class="container">
+                    </span>
+                </a>
+            </li>
 
-            </div>
-        </section>
+            <li class="page-header__social-item">
+                <a href="https://twitter.com/PaweChya88" target="_blank" class="page-header__social-link">
+                    <span class="page-header__social-icon fa fa-twitter" aria-hidden="true">
 
-        <section class="resume">
-            <div class="container">
-
-            </div>
-        </section>
-
-        <section class="skills">
-            <div class="container">
-
-            </div>
-        </section>
-
-        <section class="works">
-            <div class="container">
-
-            </div>
-        </section>
+                    </span>
+                </a>
+            </li>
 
 
-        <section class="quote">
-            <div class="container">
+            <li class="page-header__social-item">
+                <a href="https://github.com/poulch" target="_blank" class="page-header__social-link">
+                    <span class="page-header__social-icon fa fa-github" aria-hidden="true">
 
-            </div>
-        </section>
+                    </span>
+                </a>
+            </li>
+
+            <li class="page-header__social-item page-header__social-item--last">
+                <a href="http://www.linkedin.com/in/paweł-chyła-3925baa3" target="_blank" class="page-header__social-link">
+                    <span class="page-header__social-icon fa fa-linkedin" aria-hidden="true">
+
+                    </span>
+                </a>
+            </li>
 
 
-        <section class="contact">
-            <div class="container">
+        </ul>
+    </div>
+</header>
 
-            </div>
-        </section>
+<nav class="page-nav">
+    <div class="container">
+        <div class="page-nav__flex-container">
+            <ul class="page-nav__list">
+                <li class="page-nav__list-item">
+                    <a href="#" class="page-nav__link">Strona główna</a>
+                </li>
+
+                <li class="page-nav__list-item">
+                    <a href="#" class="page-nav__link">O mnie</a>
+                </li>
+
+                <li class="page-nav__list-item">
+                    <a href="#" class="page-nav__link">CV</a>
+                </li>
+
+                <li class="page-nav__list-item">
+                    <a href="#" class="page-nav__link">Umiejętności</a>
+                </li>
+
+                <li class="page-nav__list-item">
+                    <a href="#" class="page-nav__link">Realizacje</a>
+                </li>
+
+                <li class="page-nav__list-item page-nav__list-item--last">
+                    <a href="#" class="page-nav__link">Kontakt</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<section class="about-me">
+    <div class="container">
+
+    </div>
+</section>
+
+<section class="milestones">
+    <div class="container">
+
+    </div>
+</section>
+
+<section class="resume">
+    <div class="container">
+
+    </div>
+</section>
+
+<section class="skills">
+    <div class="container">
+
+    </div>
+</section>
+
+<section class="works">
+    <div class="container">
+
+    </div>
+</section>
 
 
+<section class="quote">
+    <div class="container">
+
+    </div>
+</section>
 
 
-        <footer class="page-footer">
-            <div class="container">
+<section class="contact">
+    <div class="container">
 
-            </div>
-        </footer>
+    </div>
+</section>
 
-       
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/main.js"></script>
-    </body>
+<footer class="page-footer">
+    <div class="container">
+
+    </div>
+</footer>
+
+
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+<script src="js/main.js"></script>
+</body>
 </html>
