Working on about section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             </li>
 
             <li class="page-header__social-item page-header__social-item--last">
-                <a href="http://www.linkedin.com/in/paweł-chyła-3925baa3" target="_blank" class="page-header__social-link">
+                <a href="http://www.linkedin.com/in/paweł-chyła-3925baa3" target="_blank"
+                   class="page-header__social-link">
                     <span class="page-header__social-icon fa fa-linkedin" aria-hidden="true">
 
                     </span>
@@ -104,6 +105,81 @@
 
 <section class="about-me">
     <div class="container">
+        <h1 class="main-heading">O mnie</h1>
+
+        <div class="about-me__text">
+            <p class="about-me__text-lead">
+                Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec
+                tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
+                Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+            </p>
+            <p>
+                Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit.
+                Sed ut imperdiet nisi. Proin condimentum
+                fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa
+                nisl quis neque.
+            </p>
+        </div>
+
+        <div class="clearfix">
+            <img src="img/me.jpg" class="about-me__photo" alt="Paweł Chyła photo">
+            <div class="about-me__details">
+                <div class="about-me__detail-info">
+                    <div class="about-me__info-item">
+                        <p class="about-me__info-heading">Birthday</p> <p class="about-me__info-text">:12.05.2016</p>
+                    </div>
+                    <div class="about-me__info-item">
+                        <p class="about-me__info-heading">Birthday</p> <p class="about-me__info-text">:12.05.2016</p>
+                    </div>
+                    <div class="about-me__info-item">
+                        <p class="about-me__info-heading">Birthday</p> <p class="about-me__info-text">:12.05.2016</p>
+                    </div>
+                </div>
+
+                <p class="about-me__signature">Paweł Chyła</p>
+
+                <a href="" class="btn"><span class="btn__icon fa fa-download"></span> Pobierz CV</a>
+            </div>
+
+            <div class="about-me__hobbies">
+                <p class="about-me__hobbies__heading">Hobbi i zainteresowania</p>
+                <div class="about-me__hobby-item">
+                    <span class="about-me__hobby-title"></span>
+                    <span class="about-me__hobby-icon fa fa-gamepad"></span>
+                </div>
+
+                <div class="about-me__hobby-item">
+                    <span class="about-me__hobby-title"></span>
+                    <span class="about-me__hobby-icon fa fa-laptop"></span>
+                </div>
+
+                <div class="about-me__hobby-item">
+                    <span class="about-me__hobby-title"></span>
+                    <span class="about-me__hobby-icon fa fa-headphones"></span>
+                </div>
+
+                <div class="about-me__hobby-item">
+                    <span class="about-me__hobby-title"></span>
+                    <span class="about-me__hobby-icon fa fa-money"></span>
+                </div>
+
+                <div class="about-me__hobby-item">
+                    <span class="about-me__hobby-title"></span>
+                    <span class="about-me__hobby-icon fa fa-video-camera"></span>
+                </div>
+
+                <div class="about-me__hobby-item">
+                    <span class="about-me__hobby-title"></span>
+                    <span class="about-me__hobby-icon fa fa-cutlery"></span>
+                </div>
+
+
+
+
+
+            </div>
+
+        </div>
 
     </div>
 </section>
