--- a/index.html
+++ b/index.html
@@ -121,19 +121,21 @@
             </p>
         </div>
 
-        <div class="clearfix">
+        <div class="clearfix flex-container">
             <img src="img/me.jpg" class="about-me__photo" alt="Paweł Chyła photo">
+
             <div class="about-me__details">
                 <div class="about-me__detail-info">
-                    <div class="about-me__info-item">
-                        <p class="about-me__info-heading">Birthday</p> <p class="about-me__info-text">:12.05.2016</p>
+                    <div class="about-me__info-item clearfix">
+                        <p class="about-me__info-heading">Birthday</p> <p class="about-me__info-text">: 12.05.2016</p>
                     </div>
-                    <div class="about-me__info-item">
-                        <p class="about-me__info-heading">Birthday</p> <p class="about-me__info-text">:12.05.2016</p>
+                    <div class="about-me__info-item clearfix">
+                        <p class="about-me__info-heading">Phone</p> <p class="about-me__info-text">: +61 9870 4563</p>
                     </div>
-                    <div class="about-me__info-item">
-                        <p class="about-me__info-heading">Birthday</p> <p class="about-me__info-text">:12.05.2016</p>
+                    <div class="about-me__info-item clearfix">
+                        <p class="about-me__info-heading">Email</p> <p class="about-me__info-text">: chyla1988@mail.com</p>
                     </div>
+
                 </div>
 
                 <p class="about-me__signature">Paweł Chyła</p>
@@ -141,36 +143,44 @@
                 <a href="" class="btn"><span class="btn__icon fa fa-download"></span> Pobierz CV</a>
             </div>
 
-            <div class="about-me__hobbies">
-                <p class="about-me__hobbies__heading">Hobbi i zainteresowania</p>
-                <div class="about-me__hobby-item">
-                    <span class="about-me__hobby-title"></span>
-                    <span class="about-me__hobby-icon fa fa-gamepad"></span>
-                </div>
+            <div class="about-me__hobbies clearfix">
+                <p class="about-me__hobbies-heading">Hobby i zainteresowania</p>
 
-                <div class="about-me__hobby-item">
-                    <span class="about-me__hobby-title"></span>
-                    <span class="about-me__hobby-icon fa fa-laptop"></span>
-                </div>
+                <div class="about-me__hobbies-container clearfix">
+                    <div class="about-me__hobby-item">
+                        <span class="about-me__hobby-icon fa fa-gamepad"></span>
+                        <span class="about-me__hobby-title">Gry</span>
+                    </div>
 
-                <div class="about-me__hobby-item">
-                    <span class="about-me__hobby-title"></span>
-                    <span class="about-me__hobby-icon fa fa-headphones"></span>
-                </div>
+                    <div class="about-me__hobby-item">
+                        <span class="about-me__hobby-icon fa fa-laptop"></span>
+                        <span class="about-me__hobby-title">Tech</span>
 
-                <div class="about-me__hobby-item">
-                    <span class="about-me__hobby-title"></span>
-                    <span class="about-me__hobby-icon fa fa-money"></span>
-                </div>
+                    </div>
 
-                <div class="about-me__hobby-item">
-                    <span class="about-me__hobby-title"></span>
-                    <span class="about-me__hobby-icon fa fa-video-camera"></span>
-                </div>
+                    <div class="about-me__hobby-item">
+                        <span class="about-me__hobby-icon fa fa-headphones"></span>
+                        <span class="about-me__hobby-title">Smartphony</span>
 
-                <div class="about-me__hobby-item">
-                    <span class="about-me__hobby-title"></span>
-                    <span class="about-me__hobby-icon fa fa-cutlery"></span>
+                    </div>
+
+                    <div class="about-me__hobby-item">
+                        <span class="about-me__hobby-icon fa fa-money"></span>
+                        <span class="about-me__hobby-title">Pieniądze</span>
+
+                    </div>
+
+                    <div class="about-me__hobby-item">
+                        <span class="about-me__hobby-icon fa fa-video-camera"></span>
+                        <span class="about-me__hobby-title">Film</span>
+
+                    </div>
+
+                    <div class="about-me__hobby-item">
+                        <span class="about-me__hobby-icon fa fa-cutlery"></span>
+                        <span class="about-me__hobby-title">Gotowanie</span>
+
+                    </div>
                 </div>
 
 
