--- a/index.html
+++ b/index.html
@@ -127,64 +127,75 @@
             <div class="about-me__details">
                 <div class="about-me__detail-info">
                     <div class="about-me__info-item clearfix">
-                        <p class="about-me__info-heading">Birthday</p> <p class="about-me__info-text">: 12.05.2016</p>
+                        <p class="about-me__info-heading">Birthday</p>
+                        <p class="about-me__info-text">: 12.05.2016</p>
                     </div>
                     <div class="about-me__info-item clearfix">
-                        <p class="about-me__info-heading">Phone</p> <p class="about-me__info-text">: +61 9870 4563</p>
+                        <p class="about-me__info-heading">Phone</p>
+                        <p class="about-me__info-text">: +61 9870 4563</p>
                     </div>
                     <div class="about-me__info-item clearfix">
-                        <p class="about-me__info-heading">Email</p> <p class="about-me__info-text">: chyla1988@mail.com</p>
+                        <p class="about-me__info-heading">Email</p>
+                        <p class="about-me__info-text">: chyla1988@mail.com</p>
                     </div>
 
                 </div>
 
                 <p class="about-me__signature">Paweł Chyła</p>
 
-                <a href="" class="btn"><span class="btn__icon fa fa-download"></span> Pobierz CV</a>
+                <div class="about-me__btn-outer">
+                    <a href="" class="btn"><span class="btn__icon fa fa-download"></span> Pobierz CV</a>
+                </div>
             </div>
 
             <div class="about-me__hobbies clearfix">
                 <p class="about-me__hobbies-heading">Hobby i zainteresowania</p>
 
                 <div class="about-me__hobbies-container clearfix">
-                    <div class="about-me__hobby-item">
-                        <span class="about-me__hobby-icon fa fa-gamepad"></span>
-                        <span class="about-me__hobby-title">Gry</span>
+                    <div class="about-me__hobby-item-outer">
+                        <div class="about-me__hobby-item">
+                            <span class="about-me__hobby-icon fa fa-gamepad"></span>
+                            <span class="about-me__hobby-title">Gry</span>
+                        </div>
+                    </div>
+                    <div class="about-me__hobby-item-outer">
+                        <div class="about-me__hobby-item">
+                            <span class="about-me__hobby-icon fa fa-laptop"></span>
+                            <span class="about-me__hobby-title">Tech</span>
+
+                        </div>
+                    </div>
+                    <div class="about-me__hobby-item-outer">
+                        <div class="about-me__hobby-item">
+                            <span class="about-me__hobby-icon fa fa-headphones"></span>
+                            <span class="about-me__hobby-title">Smartphony</span>
+
+                        </div>
+                    </div>
+                    <div class="about-me__hobby-item-outer">
+                        <div class="about-me__hobby-item">
+                            <span class="about-me__hobby-icon fa fa-money"></span>
+                            <span class="about-me__hobby-title">Pieniądze</span>
+
+                        </div>
+                    </div>
+                    <div class="about-me__hobby-item-outer">
+                        <div class="about-me__hobby-item">
+                            <span class="about-me__hobby-icon fa fa-video-camera"></span>
+                            <span class="about-me__hobby-title">Film</span>
+
+                        </div>
+                    </div>
+                    <div class="about-me__hobby-item-outer">
+                        <div class="about-me__hobby-item">
+                            <span class="about-me__hobby-icon fa fa-cutlery"></span>
+                            <span class="about-me__hobby-title">Gotowanie</span>
+
+                        </div>
                     </div>
 
-                    <div class="about-me__hobby-item">
-                        <span class="about-me__hobby-icon fa fa-laptop"></span>
-                        <span class="about-me__hobby-title">Tech</span>
 
-                    </div>
-
-                    <div class="about-me__hobby-item">
-                        <span class="about-me__hobby-icon fa fa-headphones"></span>
-                        <span class="about-me__hobby-title">Smartphony</span>
-
-                    </div>
-
-                    <div class="about-me__hobby-item">
-                        <span class="about-me__hobby-icon fa fa-money"></span>
-                        <span class="about-me__hobby-title">Pieniądze</span>
-
-                    </div>
-
-                    <div class="about-me__hobby-item">
-                        <span class="about-me__hobby-icon fa fa-video-camera"></span>
-                        <span class="about-me__hobby-title">Film</span>
-
-                    </div>
-
-                    <div class="about-me__hobby-item">
-                        <span class="about-me__hobby-icon fa fa-cutlery"></span>
-                        <span class="about-me__hobby-title">Gotowanie</span>
-
-                    </div>
                 </div>
-
-
-
 
 
             </div>
