Finish working on milestones section

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </ul>
     </div>
 </header>
-
 <nav class="page-nav">
+    <h1 class="visuallyhidden">Nawigacja</h1>
     <div class="container">
         <div class="page-nav__flex-container">
             <ul class="page-nav__list">
@@ -102,7 +102,6 @@
         </div>
     </div>
 </nav>
-
 <section class="about-me">
     <div class="container">
         <h1 class="main-heading">O mnie</h1>
@@ -144,7 +143,7 @@
                 <p class="about-me__signature">Paweł Chyła</p>
 
                 <div class="about-me__btn-outer">
-                    <a href="" class="btn"><span class="btn__icon fa fa-download"></span> Pobierz CV</a>
+                    <a href="test.txt"  download="test.txt" class="btn"><span class="btn__icon fa fa-download"></span> Pobierz CV</a>
                 </div>
             </div>
 
@@ -207,7 +206,43 @@
 
 <section class="milestones">
     <div class="container">
+        <h1 class="main-subheading milestones__heading">Osiągnięcia</h1>
+        <div class="milestones__items">
+            <div class="milestones__item">
+                <div class="milestones__icon-container">
+                    <span class="milestones__icon fa fa-coffee"></span>
+                </div>
+                <p class="milestones__counter">2412</p>
+                <p class="milestones__title">Kubków kawy</p>
+            </div>
 
+            <div class="milestones__item">
+                <div class="milestones__icon-container">
+                    <span class="milestones__icon fa fa-briefcase"></span>
+                </div>
+                <p class="milestones__counter">5</p>
+                <p class="milestones__title">Projektów</p>
+            </div>
+
+            <div class="milestones__item">
+                <div class="milestones__icon-container">
+                    <span class="milestones__icon fa fa-code"></span>
+                </div>
+                <p class="milestones__counter">2412</p>
+                <p class="milestones__title">Lini kodu</p>
+            </div>
+
+
+            <div class="milestones__item milestones__item--last">
+                <div class="milestones__icon-container">
+                    <span class="milestones__icon fa fa-clock-o"></span>
+                </div>
+                <p class="milestones__counter">2412</p>
+                <p class="milestones__title">Godzin w pracy</p>
+            </div>
+
+
+        </div>
     </div>
 </section>
 
