--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                 <p class="about-me__signature">Paweł Chyła</p>
 
                 <div class="about-me__btn-outer">
-                    <a href="test.txt"  download="test.txt" class="btn"><span class="btn__icon fa fa-download"></span> Pobierz CV</a>
+                    <a href="test.txt" download="test.txt" class="btn"><span class="btn__icon fa fa-download"></span>
+                        Pobierz CV</a>
                 </div>
             </div>
 
@@ -203,7 +204,6 @@
 
     </div>
 </section>
-
 <section class="milestones">
     <div class="container">
         <h1 class="main-subheading milestones__heading">Osiągnięcia</h1>
@@ -248,6 +248,88 @@
 
 <section class="resume">
     <div class="container">
+        <h1 class="main-heading resume__heading">curriculum vitae</h1>
+
+        <article class="resume__experiences">
+            <div class="resume__subheading">
+                <h2 class="main-subheading">Doświadczenie</h2>
+            </div>
+
+            <div class="resume__content">
+                <div class="resume__icon-container">
+                    <span class="resume__icon fa fa-folder-open-o"></span>
+                </div>
+
+
+                <div class="resume__item item item--right">
+                    <p class="item__heading">Junior webdeveloper</p>
+                    <p class="item__subheading"><span class="item__company-name">Inwave Interactive</span> 2016.11 - Do
+                        teraz</p>
+                    <p class="item__text">
+                        W Inwave Interactive pracuje od połowy listopada 2016 roku. Zajmuje się tam cięciem szablonów
+                        psd do kodu html/css/js.
+                        Wykoszystuje do tego sematyczne znaczniki z Html5 wraz preprocesor css - Sass - którego
+                        kompiljje do kodu css przy pomocu gulpa. Na codzień używam takich narzędzi jak : Bower , Npm,
+                        Webstorm, Git, Bitbucket
+                    </p>
+                </div>
+                <div class="resume__item item item--left">
+                    <p class="item__heading">Stażysta </p>
+                    <p class="item__subheading"><span class="item__company-name">Inwave Interactive</span> 2016.02 -
+                        2016.11</p>
+                    <p class="item__text">
+                        Podczas stażu, przez okres pół roku poznałem technologie służące do budowy nowoczesnych witryn
+                        internetowych. Swoją przygodę jako webdeveloper rozocząłem od praktycznej nauki Html i Css
+                        poprzez ci cięcie szablonów psd, jednak nie były to projekty komercyjne. Po opanowaniu podstaw
+                        front edu przyszedł czas na Php i Mysql. Po nauczeniu się podstaw Php zostałem wspraowdzony we
+                        framework Zend 1 i wykonałem przy jego pomocy kompletny backedn bloga.
+                    </p>
+                </div>
+                <div class="resume__item item item--right item--right-v2">
+                    <p class="item__heading">Pracownik administracyjny</p>
+                    <p class="item__subheading">Urząd gminy w Radomyślu nad Sanem</p>
+                    <p class="item__text">
+                        Jako pracownik administaracyjny pracowałem w urzędzie gminy w Radomyślu nad Sanem przez okres
+                        około 2 lat z przerwami. Zajmowałem się tam obsługą interesantów, odbieraniem telefonów i
+                        faksów,obsługą kserokopiarki.
+                    </p>
+                </div>
+            </div>
+
+
+        </article>
+        <article class="resume__education education">
+            <div class="resume__subheading resume__subheading--education">
+                <h2 class="main-subheading">Edukacja</h2>
+            </div>
+
+            <div class="resume__content">
+                <div class="resume__icon-container resume__icon-container--education">
+                    <span class="resume__icon fa fa-book"></span>
+                </div>
+
+                <div class="resume__item item item--right">
+                    <p class="item__heading">Wykształcenie wyższe</p>
+                    <p class="item__subheading">Wyższa Szkoła Humanistyczno-Przyrodnicza w Sandomierzu<span class="item__company-name-left">2009 - 2012</span></p>
+                    <p class="item__text">
+                        Trzyletnie studnia licencjackie na kierunku administracja
+                    </p>
+                </div>
+
+                <div class="resume__item item item--left item--left-v2">
+                    <p class="item__heading">Wyszktałcenie średnie</p>
+                    <p class="item__subheading"><span class="item__company-name">Zespół Szkół Nr 4 w Stalowej Woli</span> 2004 - 2007</p>
+                    <p class="item__text item__text--left">
+                        Trzyletnie liceum ogolnokształconce o profilu integracja europejska.
+                    </p>
+                </div>
+
+                <div class="resume__icon-container resume__icon-container--finish">
+                    <img src="img/ribbon.png" alt="">
+                </div>
+            </div>
+        </article>
+
 
     </div>
 </section>
