Working on skills section

--- a/index.html
+++ b/index.html
@@ -245,7 +245,6 @@
         </div>
     </div>
 </section>
-
 <section class="resume">
     <div class="container">
         <h1 class="main-heading resume__heading">curriculum vitae</h1>
@@ -310,7 +309,8 @@
 
                 <div class="resume__item item item--right">
                     <p class="item__heading">Wykształcenie wyższe</p>
-                    <p class="item__subheading">Wyższa Szkoła Humanistyczno-Przyrodnicza w Sandomierzu<span class="item__company-name-left">2009 - 2012</span></p>
+                    <p class="item__subheading">Wyższa Szkoła Humanistyczno-Przyrodnicza w Sandomierzu<span
+                        class="item__company-name-left">2009 - 2012</span></p>
                     <p class="item__text">
                         Trzyletnie studnia licencjackie na kierunku administracja
                     </p>
@@ -318,7 +318,8 @@
 
                 <div class="resume__item item item--left item--left-v2">
                     <p class="item__heading">Wyszktałcenie średnie</p>
-                    <p class="item__subheading"><span class="item__company-name">Zespół Szkół Nr 4 w Stalowej Woli</span> 2004 - 2007</p>
+                    <p class="item__subheading"><span
+                        class="item__company-name">Zespół Szkół Nr 4 w Stalowej Woli</span> 2004 - 2007</p>
                     <p class="item__text item__text--left">
                         Trzyletnie liceum ogolnokształconce o profilu integracja europejska.
                     </p>
@@ -336,6 +337,125 @@
 
 <section class="skills">
     <div class="container">
+        <h1 class="main-heading">umiejętności</h1>
+        <div class="skills__items">
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/html.png" class="skills__logo" alt="">
+                </div>
+
+                <p class="skills__title">HTML 5</p>
+                <p class="skills__text">Umiejętnośc kodowania semantycznej struktury dokumentu Html zgodnie z wytycznimi
+                    W3C</p>
+            </div>
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/css.png" class="skills__logo" alt="">
+                </div>
+
+                <p class="skills__title">CSS 3</p>
+                <p class="skills__text">Kodowanie świetnie wyglądających witryn korzytając między innymi z flexboxa</p>
+            </div>
+
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/js.png" class="skills__logo" alt="">
+                </div>
+                <p class="skills__title">JAVASCRIPT</p>
+                <p class="skills__text">Oprogramowanie zachowania witryny</p>
+            </div>
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/rwd-logo.png" class="skills__logo" alt="">
+                </div>
+                <p class="skills__title">RWD</p>
+                <p class="skills__text">Strony dobrze wyglądające na każdym urządzeniu</p>
+            </div>
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/sass.png" class="skills__logo" alt="">
+                </div>
+
+                <p class="skills__title">SASS</p>
+                <p class="skills__text">Szybkie kodowanie wartwy wizualnej strony www</p>
+            </div>
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/bootstrap.png" class="skills__logo" alt="">
+                </div>
+                <p class="skills__title">BOOTSTRAP</p>
+                <p class="skills__text">KWykorzystanie grida</p>
+            </div>
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/ajax.png" class="skills__logo" alt="">
+                </div>
+                <p class="skills__title">AJAX</p>
+                <p class="skills__text">Asynchroniczne wczytywanie teśći</p>
+            </div>
+
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/jquery.png" class="skills__logo" alt="">
+                </div>
+
+                <p class="skills__title">JQUERY</p>
+                <p class="skills__text">Proste manipulowanie drzewem DOM</p>
+            </div>
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/ps.png" class="skills__logo" alt="">
+                </div>
+
+                <p class="skills__title">PHOTOSHOP</p>
+                <p class="skills__text">Cięcie szablonu</p>
+            </div>
+
+
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/git.png" class="skills__logo" alt="">
+                </div>
+
+                <p class="skills__title">GIT</p>
+                <p class="skills__text">Kontrola wersji</p>
+            </div>
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/gulp.png" class="skills__logo" alt="">
+                </div>
+                <p class="skills__title">GULP</p>
+                <p class="skills__text">Ulatwienie pracy przy kompilacji minifikacji i laczeniu plikow</p>
+            </div>
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/php-mysql.png" class="skills__logo" alt="">
+                </div>
+                <p class="skills__title">PHP i MYSQl</p>
+                <p class="skills__text">Proste kodowanie</p>
+            </div>
+
+
+            <div class="skills__item">
+                <div class="skills__logo-container">
+                    <img src="img/logos/zf.png" class="skills__logo" alt="">
+                </div>
+
+                <p class="skills__title">ZEND FRAMEWORK 1</p>
+                <p class="skills__text">kodowanie cms</p>
+            </div>
+        </div>
 
     </div>
 </section>
