Finish working on my works section

--- a/index.html
+++ b/index.html
@@ -334,7 +334,6 @@
 
     </div>
 </section>
-
 <section class="skills">
     <div class="container">
         <h1 class="main-heading">umiejętności</h1>
@@ -462,7 +461,33 @@
 
 <section class="works">
     <div class="container">
+        <h1 class="main-heading resume__heading">Realizacje</h1>
 
+        <div class="works__items clearfix">
+            <a href="#" class="works__item">
+                <img src="img/works/voltor.svg" class="works__image" alt="">
+            </a>
+            <a href="#" class="works__item works__item--secend works__item--padding">
+                <img src="img/works/optopol.svg" class="works__image" alt="">
+            </a>
+            <a href="#" class="works__item works__item--padding">
+                <img src="img/works/fujitsu.svg" class="works__image" alt="">
+            </a>
+            <a href="#" class="works__item works__item--secend works__item--no-margin">
+                <img src="img/works/inwave.svg" class="works__image" alt="">
+            </a>
+            <a href="#" class="works__item works__item--padding-big">
+                <img src="img/works/salamandra.svg" class="works__image" alt="">
+            </a>
+            <a href="#" class="works__item works__item--secend works__item--padding-very-big ">
+                <img src="img/works/stodola.svg" class="works__image" alt="">
+            </a>
+
+
+
+
+
+        </div>
     </div>
 </section>
 
