Change works section

--- a/index.html
+++ b/index.html
@@ -464,23 +464,47 @@
         <h1 class="main-heading resume__heading">Realizacje</h1>
 
         <div class="works__items clearfix">
-            <a href="#" class="works__item">
-                <img src="img/works/voltor.svg" class="works__image" alt="">
+            <a href="http://voltor.dev.inwave.pl" target="_blank" class="works__item">
+                <div class=apla-hover>
+                    <img src="img/plus.png" alt="" class="apla-hover__icone">
+                    <p class="apla-hover__project-name">Voltor</p>
+                </div>
+                <img src="img/works/voltor.jpg" class="works__image" alt="">
             </a>
-            <a href="#" class="works__item works__item--secend works__item--padding">
-                <img src="img/works/optopol.svg" class="works__image" alt="">
+            <a href="http://optopol.com" target="_blank" class="works__item works__item--no-margin">
+                  <div class=apla-hover>
+                    <img src="img/plus.png" alt="" class="apla-hover__icone">
+                    <p class="apla-hover__project-name">Optopol</p>
+                </div>
+                <img src="img/works/optopol.jpg" class="works__image" alt="">
             </a>
-            <a href="#" class="works__item works__item--padding">
-                <img src="img/works/fujitsu.svg" class="works__image" alt="">
+            <a href="http://beta.fqs.pl" target="_blank" class="works__item">
+                  <div class=apla-hover>
+                    <img src="img/plus.png" alt="" class="apla-hover__icone">
+                    <p class="apla-hover__project-name">FQS POLAND</p>
+                </div>
+                <img src="img/works/fujitsu.jpg" class="works__image" alt="">
             </a>
-            <a href="#" class="works__item works__item--secend works__item--no-margin">
-                <img src="img/works/inwave.svg" class="works__image" alt="">
+            <a href="#" class="works__item works__item--no-margin">
+                  <div class=apla-hover>
+                    <img src="img/plus.png" alt="" class="apla-hover__icone">
+                    <p class="apla-hover__project-name">Inwave</p>
+                </div>
+                <img src="img/works/inwave.jpg" class="works__image" alt="">
             </a>
-            <a href="#" class="works__item works__item--padding-big">
-                <img src="img/works/salamandra.svg" class="works__image" alt="">
+            <a href="http://nowa.instytutsalamandra.pl" target="_blank" class="works__item">
+                  <div class=apla-hover>
+                    <img src="img/plus.png" alt="" class="apla-hover__icone">
+                    <p class="apla-hover__project-name">Instytut Salamandra</p>
+                </div>
+                <img src="img/works/salamandra.jpg" class="works__image" alt="">
             </a>
-            <a href="#" class="works__item works__item--secend works__item--padding-very-big ">
-                <img src="img/works/stodola.svg" class="works__image" alt="">
+            <a href="http://stodola.dev.inwave.pl" target="_blank" class="works__item works__item--no-margin">
+                  <div class=apla-hover>
+                    <img src="img/plus.png" alt="" class="apla-hover__icone">
+                    <p class="apla-hover__project-name">Nowoczesna Stodoła</p>
+                </div>
+                <img src="img/works/stodola.jpg" class="works__image" alt="">
             </a>
 
 
