Finish working on quote section and start working on contact

--- a/index.html
+++ b/index.html
@@ -458,7 +458,6 @@
 
     </div>
 </section>
-
 <section class="works">
     <div class="container">
         <h1 class="main-heading resume__heading">Realizacje</h1>
@@ -514,18 +513,51 @@
         </div>
     </div>
 </section>
-
-
 <section class="quote">
     <div class="container">
-
+        <blockquote class="quote__block">
+            <span class="quote__text">Without requirements or design, programming is the art of adding bugs to an empty text file
+</span>
+            <cite class="quote__author">Louis Srygley</cite>
+        </blockquote>
     </div>
 </section>
 
 
 <section class="contact">
     <div class="container">
+        <h1 class="main-heading">kontakt</h1>
 
+        <div class="contact__address-data data">
+
+            <div class="data__item data__item--first">
+                <div class="data__icon-container data__icon-container--first">
+                    <span class="data__icon fa fa-phone" aria-hidden="true"></span>
+
+                </div>
+
+                <div class="data__text">
+                    <p class="data__heading">Telefon</p>
+                    <div class="data__content">
+                        793851807
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="data__item">
+                <div class="data__icon-container data__icon-container--secend">
+                    <span class="data__icon fa fa-envelope" aria-hidden="true"></span>
+                </div>
+
+                <div class="data__text">
+                    <p class="data__heading">E-mail</p>
+                    <div class="data__content">
+                       chyla1988@gmail.com
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
